; ModuleID = '/home/carl/AnghaBench/vlc/modules/keystore/extr_file_crypt_win32.c_CryptInit.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/keystore/extr_file_crypt_win32.c_CryptInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypt = type { i32, i32 }

@Decrypt = common dso_local global i32 0, align 4
@Encrypt = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CryptInit(i32* %0, %struct.crypt* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.crypt*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.crypt* %1, %struct.crypt** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @VLC_UNUSED(i32* %5)
  %7 = load i32, i32* @Decrypt, align 4
  %8 = load %struct.crypt*, %struct.crypt** %4, align 8
  %9 = getelementptr inbounds %struct.crypt, %struct.crypt* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load i32, i32* @Encrypt, align 4
  %11 = load %struct.crypt*, %struct.crypt** %4, align 8
  %12 = getelementptr inbounds %struct.crypt, %struct.crypt* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load i32, i32* @VLC_SUCCESS, align 4
  ret i32 %13
}

declare dso_local i32 @VLC_UNUSED(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
